force-app/main/default/objects/Login_Activity__c/Login_Activity__c.object-meta.xml
<CustomObject>
    <label>Login Activity</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Login Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>