force-app/main/default/objects/Login_Activity__c/fields/ActiveHours__c.field-meta.xml
<CustomField>
    <fullName>ActiveHours__c</fullName>
    <formula>LogoutTiming__c - LoginTiming__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ActiveHours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>