force-app/main/default/objects/Login_Activity__c/fields/LoginTiming__c.field-meta.xml
<CustomField>
    <fullName>LoginTiming__c</fullName>
    <label>LoginTiming</label>
    <type>DateTime</type>
</CustomField>