force-app/main/default/objects/Login_Activity__c/fields/LogoutTiming__c.field-meta.xml
<CustomField>
    <fullName>LogoutTiming__c</fullName>
    <label>LogoutTiming</label>
    <type>DateTime</type>
</CustomField>