force-app/main/default/objects/Login_Activity__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>UserDetail__c</referenceTo>
    <relationshipName>ScreenTimings</relationshipName>
    <type>Lookup</type>
</CustomField>